# pinephone-gtk-rs-starter

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  build.rs
docker/: Dockerfile
src/: app.glade  app.gresource  app.xml  main.rs  style.css
