[package]
name = "gld-test"
version = "0.1.0"
authors = ["Richard <Richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9", features = ["v3_22"] }
cairo-rs = "0.9.1"
rand = "0"
glib = "0.10"
gio = "0.9"